--- a/FrontPizza/Resources/pages/pizza/IndexP.uk.resx
+++ b/FrontPizza/Resources/pages/pizza/IndexP.uk.resx
@@ -117,13 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="FrontPizza" xml:space="preserve">
-    <value>FrontPizza</value>
+  <data name="Add pizza" xml:space="preserve">
+    <value>Додати піцу</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Домашня Сторінка</value>
   </data>
-  <data name="Pizza" xml:space="preserve">
-    <value>Піца</value>
+  <data name="Loading" xml:space="preserve">
+    <value>Загрузка</value>
+  </data>
+  <data name="NamePizza" xml:space="preserve">
+    <value>Назва піци</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>Ціна</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Пошук</value>
+  </data>
+  <data name="Size" xml:space="preserve">
+    <value>Розмір</value>
   </data>
 </root>
